--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 authors = ["Hendrik Müller <hendrik.mueller@devboost.de>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+multithread = []
 
 [dependencies]
 image = "0.23.5"
 num-complex = "0.3.0"
 itertools = "0.9.0"
+threadpool = "1.8.1"
+num_cpus = "1.13.0"
